sites/navy/clusters/dal-navy-core-1/wave-2/overlays/anubis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: anubis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: anubis
    spec:
      containers:
        - name: anubis
          image: ghcr.io/techarohq/anubis:v1.27.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9090
          readinessProbe:
            tcpSocket:
              port: 8080
          resources:
            limits:
              cpu: 750m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: anubis-policy
              mountPath: /data/cfg/botPolicy.yaml
              subPath: botPolicy.yaml
      volumes:
        - name: anubis-policy
          configMap:
            name: anubis-policy
