sites/navy/clusters/dal-navy-core-1/wave-2/overlays/anubis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anubis
  namespace: anubis
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: anubis.navy.dalmura.cloud
    external-dns.kubernetes.io/target: navy.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-public-geoblock@kubernetescrd,traefik-public-ratelimit@kubernetescrd,traefik-public-security-headers@kubernetescrd
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - anubis.navy.dalmura.cloud
      secretName: anubis-cert
  rules:
  - host: anubis.navy.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anubis-service
            port:
              number: 8080
